--- a/scss/style.scss
+++ b/scss/style.scss
@@ -458,7 +458,7 @@ fieldset {
     &__details {}
 
     &__info {
-        color: white;
+        color: black;
         display: block;
     }
 
@@ -508,6 +508,10 @@ fieldset {
         img {
             filter: brightness(1);
         }
+    }
+
+    .header__info {
+        color: white;
     }
 
 
@@ -1883,7 +1887,7 @@ body {
     }
 
     &__block {
-        width: 50%;
+        width: 100%;
         margin-top: 50px;
     }
 
@@ -1893,6 +1897,7 @@ body {
         padding-left: 20px;
 
         li {
+            margin-top: 10px;
             color: var(--black, #201E1E);
             font-size: 20px;
             font-weight: 400;
@@ -1907,6 +1912,7 @@ body {
 
         li {
             color: var(--black, #201E1E);
+            margin-top: 10px;
             font-size: 20px;
             font-weight: 400;
             line-height: 130%;
@@ -2252,6 +2258,489 @@ body {
 }
 
 
+.card {
+
+    margin-top: 40px;
+
+    &__wrapper {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
+
+    &__image {
+        width: 630px;
+
+    }
+
+    &__slider {
+        width: 100%;
+        height: 666px;
+    }
+
+    &__slide {
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+    }
+
+    &__thumbs {
+        height: 135px;
+
+        .swiper-slide-thumb-active {
+            border: 1px solid #C1C1C1;
+            padding: 5px;
+        }
+    }
+
+    &__thumbs-slide {
+        width: 100%;
+        transition: all .3s;
+
+        img {
+            cursor: pointer;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+        }
+
+
+    }
+
+    &__controls {
+        margin-top: 50px;
+        display: flex;
+        align-items: center;
+        gap: 50px;
+    }
+
+    &__info {
+        height: max-content;
+        position: sticky;
+        top: 15px;
+    }
+
+    &__title {
+        color: #004F3D;
+        font-size: 38px;
+        font-weight: 600;
+        line-height: 120%;
+        letter-spacing: -0.38px;
+    }
+
+    &__descr {
+        margin-top: 40px;
+        color: #201E1E;
+        font-size: 20px;
+        line-height: 130%;
+    }
+
+    &__chars {
+        margin-top: 40px;
+        display: grid;
+        gap: 40px;
+    }
+
+    &__char {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 30px;
+    }
+
+    &__char-title {
+        color: #201E1E;
+        font-size: 20px;
+        line-height: 130%;
+        text-align: left;
+    }
+
+    &__char-descr {
+        color: #6CA195;
+        font-size: 20px;
+        line-height: 130%;
+
+    }
+
+    &__next,
+    &__prev {
+        width: 50px;
+        height: 50px;
+    }
+
+    &__bottom {
+        margin-top: 100px;
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+    &__price {
+        color: #000;
+        font-size: 38px;
+        font-weight: 600;
+        line-height: 120%;
+        letter-spacing: -0.38px;
+    }
+
+    &__button {
+        button {
+            width: 300px;
+        }
+    }
+}
+
+
+.video {
+    margin-top: 100px;
+    position: relative;
+
+    &__item {
+        width: 100%;
+        transition: all .3s;
+    }
+
+    &__play {
+        background: none;
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 0;
+    }
+
+    &__active {
+        img {
+            display: none;
+        }
+    }
+
+    &__off {
+        filter: brightness(.6);
+        transition: all .3s;
+    }
+}
+
+.card-tabs {
+    margin-top: 100px;
+    overflow-x: hidden;
+
+    &__wrapper {}
+
+    &__top {
+        top: 0px;
+    }
+
+    &__bottom {
+        bottom: 0px;
+    }
+
+    &__titles {
+        padding: 20px 0;
+        display: flex;
+        gap: 30px;
+        position: relative;
+
+        hr {
+            position: absolute;
+            width: 200vw;
+            left: -100%;
+        }
+
+
+
+        .ui-tabs-active {
+            a {
+                color: #004F3D;
+            }
+
+            border: 1px solid #004F3D;
+        }
+
+        li {
+            padding: 20px;
+
+            a {
+                color: rgba(53, 53, 53, 0.50);
+                font-size: 20px;
+                font-weight: 600;
+                line-height: 130%;
+            }
+
+        }
+    }
+
+    &__content {
+        >li {
+            margin-top: 50px;
+        }
+
+        .solution__items {
+            gap: 55px;
+        }
+
+    }
+
+    &__table-wrap {}
+
+    &__table {
+        border-collapse: collapse;
+
+        th {
+            color: rgba(53, 53, 53, 0.50);
+            font-size: 20px;
+            padding: 16px;
+            line-height: 130%;
+        }
+
+        tr {
+            border-bottom: 1px solid #C1C1C1;
+        }
+
+        td {
+            width: 25%;
+            padding: 16px;
+            color: #201E1E;
+            font-size: 20px;
+            line-height: 130%;
+            vertical-align: top;
+        }
+    }
+}
+
+.contactors {
+
+    &__wrapper {}
+
+    &__disclamer {
+        width: 630px;
+        display: flex;
+        gap: 15px;
+        align-items: start;
+        background: #F4F4F4;
+        padding: 20px;
+        margin: 0 auto;
+        margin-bottom: 40px;
+    }
+}
+
+.same {
+
+    margin-top: 130px;
+
+    &__wrapper {}
+
+    &__title {
+        color: #000;
+        font-size: 38px;
+        font-weight: 600;
+        line-height: 120%;
+        letter-spacing: -0.38px;
+        display: flex;
+        justify-content: space-between;
+        gap: 50px;
+    }
+
+    &__arrows {
+        display: flex;
+        gap: 20px;
+    }
+
+    &__prev {
+        width: 50px;
+        height: 50px;
+    }
+
+    &__next {
+        width: 50px;
+        height: 50px;
+    }
+
+    &__slider {
+        margin-top: 60px;
+    }
+
+    &__slide {}
+
+    &__slide-image {
+        width: 100%;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    &__slide-title {
+        margin-top: 20px;
+        color: #201E1E;
+        font-size: 20px;
+        line-height: 130%;
+    }
+
+    &__slide-type {
+        color: rgba(53, 53, 53, 0.50);
+        font-size: 15px;
+        line-height: 130%;
+        margin-top: 20px;
+    }
+}
+
+.popup-zakaz {
+    padding: 0;
+    width: 500px;
+    cursor: auto !important;
+    height: 95vh;
+    overflow-y: auto;
+
+    .fancybox-close-small {
+        display: none;
+    }
+
+    .popup__button {
+        margin-top: 50px;
+    }
+
+    .popup__form-checkbox {
+        margin-top: 20px;
+    }
+
+    .popup__block {
+        padding: 65px 50px 50px 50px;
+    }
+
+    &__wrapper {}
+
+    &__image {
+        display: flex;
+        gap: 20px;
+        align-items: center;
+        margin-top: 50px;
+
+        img {
+            width: 90px;
+            height: 90px;
+            object-fit: contain;
+            border: 1px solid #C1C1C1;
+        }
+
+        p {
+            color: #004F3D;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 110%;
+        }
+    }
+
+    &__form {}
+
+    &__block {
+        margin-top: 50px;
+    }
+
+    .popup-order__item {
+        margin-top: 30px;
+    }
+
+    .popup-order__select {
+        background: rgba(218, 218, 218, 0.5)
+    }
+
+    &__block-left {
+        padding-left: 50px;
+    }
+
+    &__block-title {
+        display: flex;
+        gap: 20px;
+        align-items: start;
+        color: #201E1E;
+        font-size: 20px;
+        line-height: 130%;
+
+
+        span {
+            color: #DADADA;
+            font-size: 24px;
+            font-weight: 600;
+            line-height: 110%;
+        }
+    }
+
+    &__block-radio {
+        margin-top: 30px;
+        display: flex;
+        gap: 10px;
+    }
+
+    &__block-number {
+        margin-top: 30px;
+        display: flex;
+        gap: 20px;
+
+        input::-webkit-inner-spin-button {
+            display: none;
+        }
+
+        input::-webkit-outer-spin-button {
+            display: none;
+        }
+
+        input {
+            width: 30px;
+            border: none;
+            outline: none;
+            background: none;
+            color: var(--black, #201E1E);
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 130%;
+            text-align: center;
+            /* 26px */
+        }
+    }
+
+    &__minus,
+    &__plus {
+        background: none;
+        cursor: pointer;
+    }
+
+
+
+    &__block-info {}
+}
+
+.form_radio_btn input[type=radio] {
+    display: none;
+}
+
+.form_radio_btn label {
+    display: block;
+    cursor: pointer;
+    padding: 15px 20px;
+    border: 1px solid #DADADA;
+    background: #FFF;
+    color: rgba(53, 53, 53, 0.50);
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 130%;
+    transition: all .3s;
+    box-sizing: border-box;
+}
+
+/* Checked */
+.form_radio_btn input[type=radio]:checked+label {
+    color: #004F3D;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 130%;
+    border: 1px solid #004F3D;
+    background: #FFF;
+}
 
 
 @media (max-height:900px) {
@@ -2286,6 +2775,51 @@ body {
     .contacts__wrapper {
         padding-left: 125px;
     }
+
+    .card {
+        &__wrapper {
+            gap: 50px;
+        }
+
+        &__image {
+            width: 550px;
+        }
+
+        &__slider {
+            height: 550px;
+        }
+
+        &__thumbs {
+            height: 100px;
+        }
+
+        &__controls {
+            gap: 30px;
+        }
+
+        &__price {
+            font-size: 34px;
+        }
+    }
+
+    .card-tabs {
+        &__titles {
+            li {
+                a {
+                    font-size: 18px;
+                }
+            }
+        }
+
+        &__table {
+
+            td,
+            th {
+                font-size: 18px;
+            }
+        }
+    }
+
 
     .catalog {
         &__wrapper {
@@ -2478,9 +3012,56 @@ body {
         }
 
     }
+
+    .card {
+        &__image {
+            width: 500px;
+        }
+
+        &__slider {
+            height: 500px;
+        }
+
+        &__title {
+            font-size: 34px;
+        }
+
+        &__descr {
+            font-size: 18px;
+        }
+
+        &__char-title {
+            font-size: 18px;
+        }
+
+        &__char-descr {
+            font-size: 18px;
+        }
+
+        &__bottom {
+            margin-top: 75px;
+        }
+
+        &__button {
+            button {
+                width: 250px;
+            }
+        }
+    }
+
+    .card-tabs {
+        &__titles {
+            flex-wrap: wrap;
+            gap: 20px;
+
+            li {
+                padding: 15px;
+            }
+        }
+    }
 }
 
-@media (max-width:1200px) {
+@media (max-width:1199px) {
     .container {
         padding: 0 30px 0 120px;
     }
@@ -2662,6 +3243,55 @@ body {
     .catalog-page__items {
         grid-template-columns: repeat(3, 1fr);
     }
+
+    .card {
+        &__image {
+            width: 400px;
+            height: max-content;
+            position: sticky;
+            top: 50px;
+        }
+
+        &__title {
+            font-size: 30px;
+        }
+
+        &__char {
+            gap: 15px;
+            grid-template-columns: repeat(1, 1fr);
+            border: 1px solid #004F3D;
+            padding: 10px;
+            border-radius: 10px;
+            text-align: center;
+        }
+
+        &__char-title {
+            text-align: center;
+        }
+
+        &__info {
+            position: static;
+        }
+
+        &__price {
+            font-size: 30px;
+        }
+
+        &__bottom {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
+    .card-tabs {
+        &__table {
+
+            td,
+            th {
+                font-size: 16px;
+            }
+        }
+    }
 }
 
 @media (max-width:992px) {
@@ -2684,6 +3314,36 @@ body {
 
         &__bottom {
             margin-top: 30px;
+        }
+    }
+
+    .card {
+
+        &__wrapper {
+            gap: 30px;
+        }
+
+        &__image {
+            width: 350px;
+        }
+
+        &__slider {
+            height: 400px;
+        }
+
+        &__title {
+            font-size: 26px;
+        }
+    }
+
+    .card-tabs {
+
+        &__table-wrap {
+            overflow-x: auto;
+        }
+
+        &__table {
+            min-width: 800px;
         }
     }
 
@@ -2763,6 +3423,10 @@ body {
 
         &__details {
             display: block;
+
+            a {
+                color: white;
+            }
         }
 
     }
@@ -2984,6 +3648,81 @@ body {
     //     }
     // }
 
+    .popup-zakaz {
+
+
+        &__block-title {
+            font-size: 18px;
+        }
+    }
+
+    .form_radio_btn label {
+        font-size: 18px;
+    }
+
+    .form_radio_btn input[type=radio]:checked+label {
+        font-size: 18px;
+    }
+
+    .card {
+        &__wrapper {
+            grid-template-columns: 1fr;
+        }
+
+        &__image {
+            width: 90vw;
+            position: relative;
+
+            img {
+                object-fit: contain;
+            }
+        }
+
+        &__info {
+            margin-top: 50px;
+        }
+
+        &__chars {
+            justify-content: center;
+        }
+
+        &__char {
+            min-width: 300px;
+        }
+
+        &__bottom {
+            margin-top: 50px;
+            flex-direction: row;
+        }
+    }
+
+
+    .card-tabs {
+        &__titles {
+            justify-content: space-evenly;
+
+            li {
+                a {
+                    font-size: 16px;
+                }
+            }
+        }
+
+        .solution__items {
+            gap: 25px;
+        }
+    }
+
+    .same {
+        &__title {
+            font-size: 24px;
+            gap: 20px;
+        }
+    }
+
+    .contactors__disclamer {
+        width: 100%;
+    }
 
     .solution-item {
         &__block {
@@ -3261,6 +4000,31 @@ body {
 }
 
 @media (max-width:577px) {
+
+
+    .video {
+        margin-top: 75px;
+    }
+
+    .card {
+        &__bottom {
+            flex-direction: column;
+        }
+
+        &__chars {
+            width: 100%;
+            justify-content: unset;
+        }
+
+        &__char {
+            min-width: unset;
+            width: 100%;
+        }
+    }
+
+    .card-tabs {
+        margin-top: 75px;
+    }
 
     .popup {
         width: 95%;
