--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2591,6 +2591,7 @@ body {
 
 .popup-zakaz {
     padding: 0;
+    display: none;
     width: 500px;
     cursor: auto !important;
     height: 95vh;
