--- a/css/style.css
+++ b/css/style.css
@@ -1474,6 +1474,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-size: 14px;
   gap: 10px;
   -webkit-box-align: center;
       -ms-flex-align: center;
