--- a/css/style.css
+++ b/css/style.css
@@ -2424,7 +2424,10 @@ body {
   margin-top: 30px;
 }
 .popup-zakaz .popup-order__select {
-  background: rgba(218, 218, 218, 0.5);
+  background-color: rgba(218, 218, 218, 0.5);
+  appearance: none;
+  background-image: url(arrow_custom.svg) no-repeat right;
+  background-position-x: calc(100% - 8px);
 }
 .popup-zakaz__block-left {
   padding-left: 50px;
