--- a/css/style.css
+++ b/css/style.css
@@ -1570,11 +1570,14 @@ body {
   width: 100%;
 }
 .popup-order__select {
-  background: hsla(166, 22%, 53%, 0.2);
+  background-color: hsla(166, 22%, 53%, 0.2);
   color: rgba(53, 53, 53, 0.5);
   font-size: 20px;
   font-weight: 400;
   line-height: 130%;
+  appearance: none;
+  background-image: url(arrow_custom.svg) no-repeat right;
+  background-position-x: calc(100% - 8px);
 }
 .popup-order__select option {
   font-size: 18px;
