--- a/css/style.css
+++ b/css/style.css
@@ -1578,6 +1578,7 @@ body {
   appearance: none;
   background-image: url(../img/arrow-custom.png);
   background-position-x: calc(100% - 8px);
+  background-repeat: no-repeat;
 }
 .popup-order__select option {
   font-size: 18px;
