--- a/css/style.css
+++ b/css/style.css
@@ -2724,6 +2724,10 @@ body {
   .container {
     padding: 0 30px 0 120px;
   }
+
+  .product-big{
+    margin-top: 0px;
+  }
   .header__wrapper {
     padding-left: 120px;
   }
