--- a/css/style.css
+++ b/css/style.css
@@ -3522,6 +3522,7 @@ body {
   }
   .consultation__form input {
     height: 50px;
+    width: 100%;
   }
   .consultation__button {
     width: 100%;
