--- a/css/style.css
+++ b/css/style.css
@@ -531,7 +531,7 @@ fieldset {
   font-weight: 400;
   padding: 20px 15px;
   line-height: 100%;
-  width: 80px;
+  width:100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
