--- a/css/style.css
+++ b/css/style.css
@@ -363,6 +363,7 @@ fieldset {
   border-bottom: 1px solid #DADADA;
   height: 80px;
   width: 100%;
+background: white;
   position: relative;
   top: 0;
   z-index: 10;
@@ -2259,6 +2260,7 @@ body {
   bottom: 0px;
 }
 .card-tabs__titles {
+  background: white;
   padding: 20px 0;
   display: -webkit-box;
   display: -ms-flexbox;
