--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ background: white;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-left: 15vw;
+  padding-left: 15.5vw;
   height: 100%;
 }
 .header__menu {
@@ -2229,6 +2229,7 @@ body {
   width: 100%;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+  display: block;
 }
 .video__play {
   background: none;
@@ -2534,10 +2535,18 @@ body {
     display: none;
   }
 }
+@media (max-width: 1800px) {
+  .header__wrapper{
+    padding-left: 15vw;
+  }
+}
+
 @media (max-width: 1700px) {
   .header__wrapper {
     padding-left: 125px;
   }
+
+
   .header__button {
     display: none;
   }
