--- a/css/style.css
+++ b/css/style.css
@@ -517,17 +517,13 @@ background: white;
   background: #6CA195;
 }
 .sidebar__button {
-  -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: tb-rl;
-          writing-mode: vertical-rl;
-  -webkit-writing-mode: tb-rl;
-      -ms-writing-mode: tb-rl;
-          writing-mode: tb-rl;
+  height: 275px;
   width: 80px;
 }
 .sidebar__button button {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
+  transform: rotate(90deg);
+  transform-origin: 80px 0px;
+  margin-top: 30px;
   font-size: 20px;
   font-weight: 400;
   padding: 20px 15px;
