--- a/css/style.css
+++ b/css/style.css
@@ -522,7 +522,7 @@ background: white;
 }
 .sidebar__button button {
   transform: rotate(90deg);
-  transform-origin: 80px 0px;
+  transform-origin: 80px 0px 80px 0px;
   margin-top: 30px;
   font-size: 20px;
   font-weight: 400;
