--- a/css/style.css
+++ b/css/style.css
@@ -528,7 +528,8 @@ background: white;
   font-weight: 400;
   padding: 20px 15px;
   line-height: 100%;
-  width:100%;
+  width: 300px;
+  height: 80px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
