--- a/css/style.css
+++ b/css/style.css
@@ -517,7 +517,8 @@ background: white;
   background: #6CA195;
 }
 .sidebar__button {
-  height: 300px;
+  height: 350px;
+
 }
 .sidebar__button button {
   transform: rotate(90deg);
@@ -527,7 +528,7 @@ background: white;
   font-weight: 400;
   padding: 20px 15px;
   line-height: 100%;
-  width: 320px;
+  width: max-content;
   height: 80px;
   display: -webkit-box;
   display: -ms-flexbox;
